move some things around, fix logo alignment, add more base colors

--- a/client/src/components/Sidebar/index.module.css
+++ b/client/src/components/Sidebar/index.module.css
@@ -1,25 +1,26 @@
+.root {
+  overflow: auto;
+  height: 100vh;
+  position: fixed;
+  left: 0;
+  z-Index: 10;
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
+}
+
 .brand {
   height: 64px;
-  margin: 0 auto 22px 24px;
+  margin-bottom: 22px;
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: center;
 }
 
-.back {
-  margin-right: 12px;
-  margin-top: 4px;
-}
-
-.brand > h1 {
+.brand h1 {
   font-size: 30px;
   line-height: 38px;
   font-weight: 600;
   color: #4E61A5;
   margin: 0;
   margin-left: 10px;
-}
-
-.main{
-  margin: 24px;
 }
