--- a/client/src/index.less
+++ b/client/src/index.less
@@ -6,3 +6,6 @@
 @primary-color: #4E61A5;
 @layout-header-background: @white;
 @blue-base: @primary-color;
+@red-base: #EC5B56;
+@gold-base: #FFCD83;
+@green-base: #73BA9B;
